--- a/Login.html
+++ b/Login.html
@@ -1,15 +1,26 @@
 <html>
-    <title>Computer Science Dept</title>
-    <head></head>
-    <body>
-            <form action="/action_page.php">
-                Enter your Username:<br>
-                <input type="text" name="firstname" placeholder="Username" type="text" required>
-                <br>
-                Password:<br>
-                <input type="text" name="lastname" placeholder="Password" type="password" required>
-                <br><br>
-                <input type="submit" value="Submit">
-              </form> 
-    </body>
+<title>Computer Science Dept</title>
+
+<head></head>
+
+<body>
+
+    <form action="/action_page.php">
+
+        <div class="container">
+            <label>
+                <b>Username</b>
+            </label>
+            <input type="text" placeholder="Enter Username" name="uname" required>
+
+            <label>
+                <b>Password</b>
+            </label>
+            <input type="password" placeholder="Enter Password" name="psw" required>
+
+            <button type="submit">Login</button>
+        </div>
+    </form>
+</body>
+
 </html>
